fix: update definition section and adjust text alignment in CSS

--- a/CSS/cssfunds.css
+++ b/CSS/cssfunds.css
@@ -45,7 +45,8 @@ body {
  }
 
  .definition {
-   text-align: center;
+   width:25%;
+   text-align:left;
    font-size: 16px;
  }
 
